# braingrid

./: .pre-commit-config.yaml  Makefile  README.md  TODO.txt  pyproject.toml
.github/workflows/: deploy.yml  integrate.yml
braingrid/: braingrid.py
mlms/: __main__.py
tests/: test_actions.py
