[tool.poetry]
name = "mlms"
version = "0.2.1"
description = ""
authors = ["Kennette Basco <kmaddela@nyit.edu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = ">=25.1.0,<26.0.0"
pre-commit = "^3.7.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''

[tool.poetry.scripts]
application = "application:main"

[tool.commitizen]
version = "0.2.1"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "application/__version__.py"
]
