[project]
name = "mlms"
version = "0.0.1"
description = ""
authors = [
    {name = "kenny",email = "97374837+kankenny@users.noreply.github.com"}
]
license = { text = "MIT License" }
requires-python = ">=3.11,<3.13"

[project.dependencies]
# No runtime dependencies specified

[project.optional-dependencies.dev]
pytest = ">=8.1,<8.2"
black = ">=24.3,<25.0"
pre-commit = ">=3.7,<3.8"
flake8 = ">=7.0,<7.1"

[project.scripts]
application = "application:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''

[tool.commitizen]
version = "0.0.1"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "application/__version__.py"
]
